# slippery

./: .gitignore  CMakeLists.txt  README.md  visualize.py
cmake/: FetchOpenCV.cmake  GetOpenCV.cmake  SetOpenCVConfigSupportVars.cmake
include/Slippery/: Slippery.hpp
lib/: CMakeLists.txt  Slippery.cpp
src/: CMakeLists.txt  main.cpp
visuals/: visualize.py
